
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int tv ;
struct timeval {int sin_addr; scalar_t__ tv_usec; int tv_sec; int sin_family; int sin_port; } ;
struct sockaddr_in {int sin_addr; scalar_t__ tv_usec; int tv_sec; int sin_family; int sin_port; } ;
struct sockaddr {int dummy; } ;
struct c_info {int port; char* hostname; } ;
typedef int sa ;
typedef int fd_set ;
typedef int err ;


 int AF_INET ;
 int BLACK ;
 int BRIGHT ;
 int DEFAULT ;
 int ECONNREFUSED ;
 int EHOSTUNREACH ;
 scalar_t__ EINPROGRESS ;
 int FD_SET (int,int *) ;
 int F_SETFL ;
 int IPPROTO_IP ;
 int MAXHOSTS ;
 int O_NONBLOCK ;
 int RED ;
 int RESET ;
 int SOCK_STREAM ;
 int SOL_SOCKET ;
 int SO_ERROR ;
 int TIMEOUT ;
 int bzero (struct timeval*,int) ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 scalar_t__ errno ;
 int exit (int) ;
 int fcntl (int,int ,int ) ;
 int finger_mysql (char*,int) ;
 int fprintf (int ,char*,...) ;
 int getsockopt (int,int ,int ,int*,int*) ;
 int htons (int) ;
 int inet_aton (char*,int *) ;
 int perror (char*) ;
 int printf (char*,char*,int) ;
 int pthread_exit (int ) ;
 int select (int,int *,int *,int *,struct timeval*) ;
 int socket (int ,int ,int ) ;
 int* sockfd ;
 int stderr ;
 int textcolor (int ,int ,int ) ;

void scan_host (struct c_info *scanme)
{
 int *fd,i,l,c,err;
 fd_set wr;
 struct c_info *scanme_ptr;
 struct sockaddr_in sa;
 struct timeval tv;

 scanme_ptr = (struct c_info *) scanme;

 for(i = 0;i < MAXHOSTS; i++)
 {
  if(!sockfd[i])
  {
   fd = &sockfd[i];
   break;
   }
 }

 if((*fd = socket(AF_INET,SOCK_STREAM,IPPROTO_IP)) == (-1))
 {
  perror("\nsocket");
  exit(-1);
 }

 bzero(&sa, sizeof(sa));
 bzero(&tv, sizeof(tv));

 sa.sin_port = htons(scanme_ptr->port);
 sa.sin_family = AF_INET;
 tv.tv_sec = TIMEOUT;
 tv.tv_usec = 0;

 if(!inet_aton(scanme_ptr->hostname,&sa.sin_addr))
 {
  fprintf(stderr,"inet_aton error\n");
  pthread_exit(0);
 }


 if((fcntl(*fd,F_SETFL,O_NONBLOCK))==(-1))
 {
  fprintf(stderr,"fcntl error\n");
  pthread_exit(0);
 }


 if((c = connect(*fd, (struct sockaddr *)&sa, sizeof(sa)))==(-1))
 {
  if(errno != EINPROGRESS)
  {
   close(*fd);

   pthread_exit(0);
  }
 }
 else if (c == 0)
 {
  printf("\t[%s]\tMySQLD running on port %d\n",
   scanme_ptr->hostname, scanme_ptr->port);
  pthread_exit(0);
 }

 l = sizeof(err);


 FD_SET(*fd,&wr);

 if((c=select(*fd+1,((void*)0),&wr,((void*)0), &tv))==(0))
 {
  close(*fd);

  pthread_exit(0);
 }
 else if(c == (-1))
 {
  close(*fd);

  pthread_exit(0);
 }


 getsockopt(*fd,SOL_SOCKET,SO_ERROR,&err,&l);




 if(err == ECONNREFUSED)
 {
  close(*fd);

  pthread_exit(0);
 }
 else if(err == EHOSTUNREACH)
 {
  close(*fd);

  pthread_exit(0);
 }
 textcolor(BRIGHT, RED, BLACK);
 fprintf(stderr, "\t[%s]\tMySQLD running on port %d\n",
  scanme_ptr->hostname, scanme_ptr->port);
 textcolor(RESET, DEFAULT, DEFAULT);

 close(*fd);

 finger_mysql(scanme_ptr->hostname, scanme_ptr->port);

 pthread_exit(0);
}
